fix: [PIDM-1516] - update openapi remove securitykey info